# leto

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md
.github/workflows/: build.yml  build_and_test.yml  cmake-multi-platform.yml  codeql.yml
Assets/Shaders/basic/: vertex.vs
Dependencies/CGLM/: CMakeLists.txt
Dependencies/CGLM/clipspace/: ortho_lh_zo.c  ortho_rh_no.c  persp_lh_zo.c  view_lh_zo.c  view_rh_no.c
Dependencies/GLAD/: CMakeLists.txt  egl.h  gl.c  glad.c  glad.h
Dependencies/GLFW/: CMakeLists.txt
Dependencies/GLFW/src/: null_init.c
Source/: Main.c
Source/Assets/: Meshes.c  Meshes.h  Shaders.c  Shaders.h
Source/Diagnostic/: Platform.h  Time.c  Time.h
Source/Output/: Renderer.c  Renderer.h  Reporter.c  Reporter.h
Source/Rendering/: Renderer.c  Renderer.h  Shader.c  Shaders.h  Window.c  Window.h
Source/Utilities/: Attributes.h  Files.c  Files.h  Macros.h  Strings.c  Strings.h  Subshell.c
Source/Windowing/: Window.c  Window.h
rss/shaders/basic/: frag.fs
src/: main.c
src/diagnostic/: platform.h  time.c
src/interface/: renderer.c  renderer.h  window.c  window.h
src/io/: files.c  files.h  reporter.c  reporter.h
src/resources/: meshes.c  meshes.h  shaders.c
src/utilities/: attributes.h  strings.c  strings.h  subshell.c  subshell.h
